--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,9 @@
-/* General Reset */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Body */
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -13,10 +11,10 @@ body {
     color: #333;
 }
 
-/* Navbar */
 .navbar {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 10px 20px;
     background-color: #1a1a1a;
     color: #fff;
@@ -26,13 +24,19 @@ body {
     font-size: 1.8em;
 }
 
+.navbar nav {
+    flex-grow: 1; 
+    display: flex;
+    justify-content: right; 
+}
+
 .navbar nav ul {
     list-style: none;
     display: flex;
 }
 
 .navbar nav ul li {
-    margin-left: 20px;
+    margin: 0 15px; 
 }
 
 .navbar nav ul li a {
@@ -93,12 +97,12 @@ table td {
     border: 1px solid #ddd;
 }
 
-.buy-button-container {
+.learn-button-container {
     text-align: center;
     margin-top: 20px;
 }
 
-.buy-button {
+.learn-button {
     display: inline-block;
     padding: 15px 30px;
     font-size: 1.2em;
@@ -108,8 +112,8 @@ table td {
     border-radius: 5px;
 }
 
-.buy-button:hover {
-    background-color: red;
+.learn-button:hover {
+    background-color: #bb0d2a;
 }
 
 footer {
@@ -118,3 +122,56 @@ footer {
     background-color: #1a1a1a;
     color: #fff;
 }
+
+.specs-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.spec-item {
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    text-align: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.spec-item h3 {
+    font-size: 1.2em;
+    color: #cf0d2d;
+    margin-bottom: 10px;
+}
+
+.spec-item p {
+    font-size: 1em;
+    color: #333;
+    line-height: 1.5;
+}
+
+.key-features-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.feature-item {
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+.feature-item img {
+    max-width: 100%;
+    max-height: 100%; /* Ensures consistent image height */
+    object-fit: cover; /* Makes images fit nicely into their container */
+    border-radius: 5px;
+}
+
