--- a/styles.css
+++ b/styles.css
@@ -170,8 +170,8 @@ footer {
 
 .feature-item img {
     max-width: 100%;
-    max-height: 100%; /* Ensures consistent image height */
-    object-fit: cover; /* Makes images fit nicely into their container */
+    max-height: 100%;
+    object-fit: cover; 
     border-radius: 5px;
 }
 
